--- a/packages/connection/package.json
+++ b/packages/connection/package.json
@@ -10,5 +10,8 @@
     "@xmpp/streamparser": "^0.0.0",
     "@xmpp/xml": "^0.0.0",
     "ltx": "^2.4.2"
+  },
+  "browser": {
+    "url": false
   }
 }
