--- a/packages/connection-tcp/package.json
+++ b/packages/connection-tcp/package.json
@@ -6,6 +6,7 @@
   "version": "0.0.0",
   "license": "ISC",
   "dependencies": {
+    "@xmpp/connection": "^0.0.0",
     "@xmpp/streamparser": "^0.0.0",
     "@xmpp/xml": "^0.0.0"
   }
